--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@types/node": "^12.0.0",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "firebase": "^10.2.0",
     "framer-motion": "^6.2.9",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^3.0.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
