--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@types/node": "^12.0.0",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "axios": "^1.5.0",
     "firebase": "^10.2.0",
     "framer-motion": "^6.2.9",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^3.0.0",
+    "react-mailchimp-subscribe": "^2.1.3",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.3",
@@ -49,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-mailchimp-subscribe": "^2.1.1",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "eslint": "8.7.0",
