--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^10.2.0",
     "framer-motion": "^6.2.9",
     "react": "^18.1.0",
+    "react-csv-reader": "^4.0.0",
     "react-dom": "^18.1.0",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^3.0.0",
