--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
     "axios": "^1.5.0",
+    "csv-parser": "^3.0.0",
     "email-validator": "^2.0.4",
     "firebase": "^10.2.0",
     "framer-motion": "^6.2.9",
+    "papaparse": "^5.4.1",
     "react": "^18.1.0",
     "react-csv-reader": "^4.0.0",
+    "react-datepicker": "^4.18.0",
     "react-dom": "^18.1.0",
+    "react-drag-drop-files": "^2.3.10",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^3.0.0",
     "react-router-dom": "^6.15.0",
@@ -52,6 +56,8 @@
     ]
   },
   "devDependencies": {
+    "@types/papaparse": "^5.3.8",
+    "@types/react-datepicker": "^4.15.0",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "eslint": "8.7.0",
