--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^18.0.4",
     "axios": "^1.5.0",
     "csv-parser": "^3.0.0",
+    "dayjs": "^1.11.9",
     "email-validator": "^2.0.4",
     "firebase": "^10.2.0",
     "framer-motion": "^6.2.9",
