--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^14.1.0",
     "@types/jest": "^28.1.1",
     "@types/node": "^12.0.0",
+    "@types/numeral": "^2.0.2",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
     "axios": "^1.5.0",
@@ -19,6 +20,8 @@
     "email-validator": "^2.0.4",
     "firebase": "^10.2.0",
     "framer-motion": "^6.2.9",
+    "numeral": "^2.0.6",
+    "numeraljs": "^1.5.6",
     "papaparse": "^5.4.1",
     "react": "^18.1.0",
     "react-csv-reader": "^4.0.0",
